# agents

1_foundations/: 3_lab3.ipynb
2_openai/: 2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
3_crew/target_acquisition/: README.md  pyproject.toml
3_crew/target_acquisition/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/target_acquisition/output/: engagement_preparation.json  hpt_criteria_definition.json  hpt_prioritization.json  hpt_prioritization.md  market_dynamics_report.json  prospect_discovery.json  prospect_research.json  targeting_effectiveness_assessment.json
3_crew/target_acquisition/src/target_acquisition/: crew.py  main.py
3_crew/target_acquisition/src/target_acquisition/config/: agents.yaml  tasks.yaml
