[project]
name = "target_acquisition"
version = "0.1.0"
description = "target_acquisition using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.1"
]

[project.scripts]
target_acquisition = "target_acquisition.main:run"
run_crew = "target_acquisition.main:run"
train = "target_acquisition.main:train"
replay = "target_acquisition.main:replay"
test = "target_acquisition.main:test"
run_with_trigger = "target_acquisition.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
